#-------------------------------------------------------------------
# This file is part of a CMake build system designed for GUCEF
#     (Galaxy Unlimited Framework)
# For the latest info, see http://www.VanvelzenSoftware.com/
#
# The contents of this file are placed in the public domain. Feel
# free to make use of it in any way you like.
#-------------------------------------------------------------------
#

# Configure gucefGUI

set(HEADER_FILES 
  include/gucefGUI.h
  include/gucefGUI_CButton.h
  include/gucefGUI_CCheckbox.h
  include/gucefGUI_CCombobox.h
  include/gucefGUI_CEditbox.h
  include/gucefGUI_CFileSystemDialog.h
  include/gucefGUI_CForm.h
  include/gucefGUI_CFormBackend.h
  include/gucefGUI_CFormEx.h
  include/gucefGUI_CFormFactory.h
  include/gucefGUI_CGridView.h
  include/gucefGUI_CGUIDriver.h
  include/gucefGUI_CGUIManager.h
  include/gucefGUI_CIFileSystemInfoProvider.h
  include/gucefGUI_CIGUIContext.h
  include/gucefGUI_CImageFrame.h
  include/gucefGUI_CLabel.h
  include/gucefGUI_CListBox.h
  include/gucefGUI_CMenuBar.h
  include/gucefGUI_CModule.h
  include/gucefGUI_config.h
  include/gucefGUI_CPopupMenu.h
  include/gucefGUI_CProgressBar.h
  include/gucefGUI_CPushButton.h
  include/gucefGUI_CRenderContext.h
  include/gucefGUI_CSpinner.h
  include/gucefGUI_CTabContentPane.h
  include/gucefGUI_CTabControl.h
  include/gucefGUI_CTextbox.h
  include/gucefGUI_CTreeview.h
  include/gucefGUI_CUDim.h
  include/gucefGUI_CUVector.h
  include/gucefGUI_CWidget.h
  include/gucefGUI_CWidgetFactory.h
  include/gucefGUI_CWindow.h
  include/gucefGUI_ETypes.h
  include/gucefGUI_macros.h
)

set(SOURCE_FILES 
  src/gucefGUI.cpp
  src/gucefGUI_CButton.cpp
  src/gucefGUI_CCheckbox.cpp
  src/gucefGUI_CCombobox.cpp
  src/gucefGUI_CEditbox.cpp
  src/gucefGUI_CFileSystemDialog.cpp
  src/gucefGUI_CForm.cpp
  src/gucefGUI_CFormBackend.cpp
  src/gucefGUI_CFormEx.cpp
  src/gucefGUI_CFormFactory.cpp
  src/gucefGUI_CGridView.cpp
  src/gucefGUI_CGUIDriver.cpp
  src/gucefGUI_CGUIManager.cpp
  src/gucefGUI_CIFileSystemInfoProvider.cpp
  src/gucefGUI_CIGUIContext.cpp
  src/gucefGUI_CImageFrame.cpp
  src/gucefGUI_CLabel.cpp
  src/gucefGUI_CListbox.cpp
  src/gucefGUI_CMenuBar.cpp
  src/gucefGUI_CModule.cpp
  src/gucefGUI_CPopupMenu.cpp
  src/gucefGUI_CProgressBar.cpp
  src/gucefGUI_CPushButton.cpp
  src/gucefGUI_CRenderContext.cpp
  src/gucefGUI_CSpinner.cpp
  src/gucefGUI_CTabContentPane.cpp
  src/gucefGUI_CTabControl.cpp
  src/gucefGUI_CTextbox.cpp
  src/gucefGUI_CTreeview.cpp
  src/gucefGUI_CUDim.cpp
  src/gucefGUI_CUVector.cpp
  src/gucefGUI_CWidget.cpp
  src/gucefGUI_CWidgetFactory.cpp
  src/gucefGUI_CWindow.cpp
)

# Make sure the PLATFORM_HEADER_FILES variable is always defined
 set( PLATFORM_HEADER_FILES "" )

# Make sure the PLATFORM_SOURCE_FILES variable is always defined
 set( PLATFORM_SOURCE_FILES "" )

# For ease of use make a variable that has all files for this module
set( ALL_FILES ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_HEADER_FILES} ${PLATFORM_SOURCE_FILES} )




#******** END OF AUTOGENERATED CONTENT ********



add_library( gucefGUI ${HEADER_FILES} ${SOURCE_FILES} )
add_dependencies( gucefGUI gucefCORE gucefMT gucefVFS gucefIMAGE )
target_link_libraries( gucefGUI gucefCORE gucefMT gucefVFS )
set_target_properties( gucefGUI PROPERTIES COMPILE_DEFINITIONS GUCEFGUI_BUILD_MODULE )
GUCEF_config_lib( gucefGUI )


#******** START OF AUTOGENERATED CONTENT ********



include_directories( ../gucefCORE/include ../gucefIMAGE/include ../gucefMT/include ../gucefVFS/include include )

if ( WIN32 )
  include_directories( ../gucefCORE/include/mswin )
endif( WIN32 )

if ( WIN64 )
  include_directories( ../gucefCORE/include/mswin )
endif( WIN64 )



#******** END OF AUTOGENERATED CONTENT ********


