#-------------------------------------------------------------------
# This file is part of a CMake build system designed for GUCEF
#     (Galaxy Unlimited Framework)
# For the latest info, see http://www.VanvelzenSoftware.com/
#
# The contents of this file are placed in the public domain. Feel
# free to make use of it in any way you like.
#-------------------------------------------------------------------
#

# Configure ProjectGenerator

set(HEADER_FILES 
  include/gucefProjectGenerator_CAndroidMakefileGenerator.h
  include/gucefProjectGenerator_CCMakeProjectGenerator.h
  include/gucefProjectGenerator_CDirCrawlingProjectInfoGatherer.h
  include/gucefProjectGenerator_CIProjectGenerator.h
  include/gucefProjectGenerator_CIProjectInfoGatherer.h
  include/gucefProjectGenerator_CXmlProjectGenerator.h
  include/gucefProjectGenerator_DataTypes.h
)

set(SOURCE_FILES 
  src/gucefProjectGenerator_CAndroidMakefileGenerator.cpp
  src/gucefProjectGenerator_CCMakeProjectGenerator.cpp
  src/gucefProjectGenerator_CDirCrawlingProjectInfoGatherer.cpp
  src/gucefProjectGenerator_CIProjectGenerator.cpp
  src/gucefProjectGenerator_CIProjectInfoGatherer.cpp
  src/gucefProjectGenerator_CXmlProjectGenerator.cpp
  src/main.cpp
)

# Make sure the PLATFORM_HEADER_FILES variable is always defined
 set( PLATFORM_HEADER_FILES "" )

# Make sure the PLATFORM_SOURCE_FILES variable is always defined
 set( PLATFORM_SOURCE_FILES "" )

# For ease of use make a variable that has all files for this module
set( ALL_FILES ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_HEADER_FILES} ${PLATFORM_SOURCE_FILES} )




#******** END OF AUTOGENERATED CONTENT ********



if (WIN32)
  add_executable( ProjectGenerator WIN32 ${HEADER_FILES} ${SOURCE_FILES} )
else()
  add_executable( ProjectGenerator ${HEADER_FILES} ${SOURCE_FILES} )
endif()
add_dependencies( ProjectGenerator gucefCORE gucefMT)
target_link_libraries( ProjectGenerator gucefCORE gucefMT )
set_target_properties( ProjectGenerator PROPERTIES COMPILE_DEFINITIONS PROJECTGENERATOR_BUILD_MODULE )
GUCEF_config_tool( ProjectGenerator )


#******** START OF AUTOGENERATED CONTENT ********



include_directories( ../../gucefCORE/include ../../gucefMT/include include )

if ( UNIX )
  include_directories( ../../gucefCORE/include/linux )
endif( UNIX )

if ( WIN32 )
  include_directories( ../../gucefCORE/include/mswin )
endif( WIN32 )

if ( WIN64 )
  include_directories( ../../gucefCORE/include/mswin )
endif( WIN64 )



#******** END OF AUTOGENERATED CONTENT ********


